# cff-creation-action

./: .gitignore  Dockerfile  action.yml  entrypoint.sh  julia_CITATION.cff  make_cff_file.py  pytest.ini  python_CITATION.cff
.github/workflows/: parsing_tests.yml
language_scripts/: R_metadata.R  julia_metadata.py  license_rec.py  python_metadata.py
test/: DESCRIPTION  Project.toml  README  pyproject.toml  setup.py  test_julia_cff.py  test_python_cff.py  test_r_cff.py
