[tool.poetry]
name = "demo_repo"
version = "1.0.0"
description = "Demonstration repository"
authors = ["Jane Doe <jane.doe@nowhere.com>", "John Smith"]

[tool.poetry.dependencies]
python = "^3.6.1"
pandas = "^1.1.3"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
ipython = "^7.13"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"